--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_email_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -34,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/login_email_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/login_password_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
