--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_name_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -34,6 +35,7 @@
         app:layout_constraintTop_toBottomOf="@id/register_name_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_last_name_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -50,6 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/register_last_name_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_email_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -66,6 +69,7 @@
         app:layout_constraintTop_toBottomOf="@id/register_email_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_password_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -82,6 +86,7 @@
         app:layout_constraintTop_toBottomOf="@id/register_password_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_confirm_password_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -98,6 +103,7 @@
         app:layout_constraintTop_toBottomOf="@id/register_confirm_password_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_age_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -114,17 +120,18 @@
         app:layout_constraintTop_toBottomOf="@id/register_age_text_field">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/register_treatment_edit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/material_button_login"
+        android:id="@+id/material_button_register"
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/login_btn_text"
+        android:text="@string/register_btn_text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_treatment_text_field" />
