--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -71,6 +71,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_password_edit"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -88,6 +89,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_confirm_password_edit"
             android:layout_width="match_parent"
+            android:inputType="textPassword"
             android:layout_height="wrap_content" />
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -104,6 +106,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/register_age_edit"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
