--- a/app/src/main/res/layout/activity_add_patient.xml
+++ b/app/src/main/res/layout/activity_add_patient.xml
@@ -139,5 +139,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/register_treatment_text_field" />
 
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/material_button_logout"
+        style="@style/Widget.MaterialComponents.Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout_btn_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/material_button_register" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
