update di classes and add new themes in style

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,10 +11,11 @@
 
     <style name="AppTheme2" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#121221</item>
+        <item name="colorPrimary">#fff333</item>
         <item name="colorPrimaryDark">#abc123</item>
         <item name="colorAccent">#123abc</item>
     </style>
+
 
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
