--- a/app/src/main/res/layout/content_list_patients.xml
+++ b/app/src/main/res/layout/content_list_patients.xml
@@ -8,4 +8,27 @@
     tools:context=".ui.doctor.listPatients.ListPatientsActivity"
     tools:showIn="@layout/activity_list_patients">
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/patient_list_recycler_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/patientNoItems"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/no_items_text"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
