update add patient

--- a/app/src/main/res/layout/activity_list_patients.xml
+++ b/app/src/main/res/layout/activity_list_patients.xml
@@ -16,7 +16,18 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:title="@string/patients">
+
+            <ImageButton
+                android:id="@+id/list_patient_logout_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:background="@drawable/ic_exit_to_app_black_24dp"
+                android:contentDescription="@string/logout" />
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
